--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -3,15 +3,18 @@
 This document provides information about changes that have been made for each new version
 of the Signature Service Support Library.
 
-== Version 2411.1
+== Version 2501.1
 
 === Improvements and bug fixes
-* Upgraded Gradle to 7.6.4 in wrapper.
-* Upgraded Grails from 6.2.0 to 6.2.2.
-* Upgraded Grails Gradle Plugin from 6.2.0 to 6.2.3.
-* Upgraded Groovy to 3.0.23.
-* Upgraded Tomcat to 9.0.97.
-* Upgraded Jackson Databind from 2.17.2 to 2.17.3.
+* Bump Gradle to 7.6.4 in wrapper.
+* Bump Grails from 6.2.0 to 6.2.3.
+* Bump Grails Gradle Plugin from 6.2.0 to 6.2.4.
+* Bump Groovy to 3.0.23.
+* Bump Tomcat to 9.0.98.
+* Bump Jackson Databind from 2.17.2 to 2.17.3.
+* Bump JSON In Java from 20240303 to 20250107.
+* Bump org.certificateservices.messages:certservice-messages to 2411.1.
+* Bump se.signatureservice.configuration:signservice-java-configuration to 2501.1.
 
 === Upgrade notes
 This release contains no breaking changes.
