--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -15,6 +15,8 @@ This release contains breaking changes.
 * Bundled validation policy now accepts the RSASSA-PSS algorithm for signatures, and on signing certificate
 * Support-lib: Fixed issue with `Missing TSPSource` when handling multi-instance signing setups.
 setTspSource is now also called during the CompleteSignature step to prevent NullPointerException.
+* Upgraded Joda Time from 2.10.14 to 2.13.1.
+* Upgraded Jackson to 2.18.3.
 
 == Version 2502.1
 
