--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -3,7 +3,7 @@
 This document provides information about changes that have been made for each new version
 of the Signature Service Support Library.
 
-== Version 2511.1
+== Version 2512.1
 
 === Enhancements
 
@@ -13,6 +13,10 @@ of the Signature Service Support Library.
 ** SHA384withRSA
 ** SHA384withECDSA
 ** SHA512withECDSA
+
+=== Dependency upgrades
+
+* The eu.europa.ec.joinup.sd-dss library upgraded to version 6.3.
 
 == Version 2509.1
 
